--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
     "expo": "~39.0.2",
     "expo-sqlite": "~8.4.0",
     "expo-status-bar": "~1.0.2",
+    "moment": "^2.29.1",
     "native-base": "^2.13.14",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native-calendar-picker": "^7.0.5",
     "react-native-elements": "^3.0.0-alpha.1",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "^2.10.1",
+    "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
